--- a/app/src/main/res/layout/activity_product_categories.xml
+++ b/app/src/main/res/layout/activity_product_categories.xml
@@ -24,34 +24,26 @@
                 app:layout_scrollFlags="scroll|enterAlways" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/very_light_gray"
             android:layout_gravity="bottom"
             app:layout_anchorGravity="bottom"
+            android:orientation="vertical"
             app:layout_anchor="@id/toolbar_list">
-
-            <LinearLayout
-                android:id="@+id/sticky_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent">
-
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tab_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:tabMode="scrollable"
-                    android:background="@color/red" />
+                    app:tabTextColor="@color/light_white"
+                    app:tabBackground="@color/red"/>
                 <FrameLayout
                     android:id="@+id/container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
