--- a/app/src/main/res/layout/item_banner_slider.xml
+++ b/app/src/main/res/layout/item_banner_slider.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:paddingHorizontal="10dp"
     android:background="@color/transparant">
 
     <androidx.cardview.widget.CardView
