--- a/app/src/main/res/layout/activity_edit_akun.xml
+++ b/app/src/main/res/layout/activity_edit_akun.xml
@@ -37,7 +37,7 @@
             android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="24sp"
-            tools:text="Profil Saya" />
+            android:text="Profil Saya" />
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
@@ -61,7 +61,7 @@
                 android:id="@+id/et_first_name_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"/>
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -76,7 +76,7 @@
                 android:id="@+id/et_last_name_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"/>
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -85,7 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:hint="Nomor HP">
+            android:hint="Nomor HP"
+            app:boxBackgroundColor="@color/light_gray">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_phone_number_edit"
@@ -99,7 +100,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:hint="E-mail">
+            android:hint="E-mail"
+            app:boxBackgroundColor="@color/light_gray">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_email_edit"
@@ -112,10 +114,10 @@
         android:id="@+id/btn_submit_user_data"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_margin="20dp"
         android:background="@drawable/shape_btn_login_register"
         android:text="@string/submit"
         android:textColor="@color/white"
-        android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
